Fixed missing white background on smaller side panels on the text viewer. Implemented <fw> rules.

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -662,6 +662,7 @@ ul.social_media_block {
     &.column {
       border: 1px solid lighten($dark, 70%);
       padding: 0;
+      background: white;
     }
 
     // TODO: temp fix. check behaviour on small screens
